# fastapi-unitofwork

./: .env  .gitignore  README.md  alembic.ini  pyproject.toml
src/fastapi_unitofwork/: app.py
src/fastapi_unitofwork/configs/: database.py  settings.py
src/fastapi_unitofwork/metadata/: tags.py
src/fastapi_unitofwork/migrations/: env.py
src/fastapi_unitofwork/migrations/versions/: a171f6c6e0a2_init.py
src/fastapi_unitofwork/models/: basemodel.py  user.py
src/fastapi_unitofwork/repositories/: generic.py  genericsql.py  user.py
src/fastapi_unitofwork/routers/v1/: auth.py  users.py
src/fastapi_unitofwork/schemas/: token.py  user.py
src/fastapi_unitofwork/services/: auth.py  uow.py  users.py
